<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Missing Socks</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="filter">Filter </string>
    <string name="title_activity_profile">profile</string>

    <string-array name="universities">
        <item>Rice University</item>
        <item>UT Austin</item>
    </string-array>

    <string name="university">University</string>
    <string name="sockname">sock</string>
    <string name="location">sock</string>
    <string name="subdetails">sock</string>
    <string name="lostfound">sock</string>

    <string-array name="laundryroomtest">
        <item>Baker</item>
        <item>Will Rice</item>
        <item>Hanszen</item>
        <item>Wiess</item>
        <item>Jones</item>
        <item>Brown</item>
        <item>Lovett</item>
        <item>Sid Rich</item>
        <item>Martel</item>
        <item>McMurtry</item>
        <item>Duncan</item>
    </string-array>

    <string name="laundryrooms">Laundry Rooms</string>
    <string name="title_activity_add_edit_sock">add_edit_sock</string>
    <string name="multiother">Multi-colored/Other</string>
    <string name="gender_label">Sock Gender</string>

    <string-array name="sockgender">
        <item>Male</item>
        <item>Female</item>
        <item>Unisex/Unknown</item>
    </string-array>

    <string name="style_label">Sock Style</string>

    <string-array name="styles">
        <item>No-Show</item>
        <item>Liner/Pad</item>
        <item>Quarter/Anklet</item>
        <item>Mid-Calf/Crew</item>
        <item>Over-the-Calf/Executive</item>
        <item>Other</item>
    </string-array>

    <string name="description">Description</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="title_section1">User Stats</string>
    <string name="title_section2">My Socks</string>
    <string name="title_section3">App Preferences</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_Filter">Filter</string>
    <string name="title_activity_view_sock">View Sock</string>
    <string name="profile">Profile</string>
    <string name="title_activity_testimage">testimage</string>

</resources>
