<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.aelsey.missingsocks.profile"
    android:weightSum="2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Add/Edit Sock"
        android:gravity="center"
        android:id="@+id/addeditsock"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/date"
        android:layout_below="@+id/addeditsock"
        android:layout_alignRight="@+id/addeditsock"
        android:layout_alignEnd="@+id/addeditsock"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/lostfound"
        android:layout_toEndOf="@+id/lostfound" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Date Found/Lost"
        android:id="@+id/date_label"
        android:layout_marginLeft="10dp"
        android:layout_alignTop="@+id/date"
        android:layout_alignBottom="@+id/date"
        android:layout_toLeftOf="@+id/date"
        android:layout_toEndOf="@+id/imageButton"
        android:layout_toRightOf="@+id/imageButton" />

    <Spinner
        android:id="@+id/universities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/universities"
        android:prompt="@string/university"
        android:layout_below="@+id/date"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:id="@+id/laundryrooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/laundryroomtest"
        android:prompt="@string/laundryrooms"
        android:layout_below="@+id/universities"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <RadioGroup

        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/laundryrooms"
        android:layout_alignRight="@+id/update_button"
        android:layout_alignEnd="@+id/update_button">

    <RadioButton
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:id="@+id/white"
        android:background="#ffffffff" />

    <RadioButton
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:id="@+id/black"
        android:background="#ff000000"
        android:layout_gravity="center_horizontal" />

    <RadioButton
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:id="@+id/beige"
        android:background="#ffffd9a8"/>

    <RadioButton
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:id="@+id/gray"
        android:background="#ff808080"/>

    <RadioButton
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:id="@+id/brown"
        android:background="#ff9a5512"/>

    <RadioButton
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:id="@+id/red"
        android:background="#ffff0007"/>

    <RadioButton
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:id="@+id/orange"
        android:background="#ffff7914"/>
    </RadioGroup>

    <RadioGroup

        android:id="@+id/radiogroup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@+id/radiogroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <RadioButton
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:id="@+id/pink"
        android:background="#ffff54ab" />

    <RadioButton
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:id="@+id/yellow"
        android:background="#fffffb23" />

    <RadioButton
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:id="@+id/green"
        android:background="#ff15ff00" />

    <RadioButton
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:id="@+id/blue"
        android:background="#ff053bff" />

    <RadioButton
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:id="@+id/purple"
        android:background="#ffb51bff" />

    <RadioButton
        android:layout_width="110sp"
        android:layout_height="wrap_content"
        android:id="@+id/other"
        android:text="@string/multiother"
        android:textSize="12sp"
        android:background="#ffffff" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/gender_label"
        android:id="@+id/gender_label"
        android:gravity="center_vertical"
        android:layout_alignTop="@+id/gender_dropdown"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/yellow"
        android:layout_alignEnd="@+id/yellow"
        android:layout_above="@+id/style_dropdown" />

    <Spinner
        android:id="@+id/gender_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/sockgender"
        android:prompt="@string/gender_label"
        android:layout_below="@+id/style_dropdown"
        android:layout_alignRight="@+id/update_button"
        android:layout_alignEnd="@+id/update_button" />

    <Spinner
        android:id="@+id/style_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/styles"
        android:prompt="@string/style_label"
        android:layout_below="@+id/radiogroup2"
        android:layout_alignRight="@+id/update_button"
        android:layout_alignEnd="@+id/update_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/style_label"
        android:id="@+id/style_label"
        android:gravity="center_vertical"
        android:layout_alignBottom="@+id/style_dropdown"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gender_dropdown"
        android:layout_toLeftOf="@+id/gender_dropdown"
        android:layout_toStartOf="@+id/gender_dropdown" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lostfound"
        android:textOn="Lost"
        android:textOff="Found"
        android:layout_below="@+id/addeditsock"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/description"
        android:id="@+id/description"
        android:gravity="center_vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/descriptiontext"
        android:layout_alignBottom="@+id/descriptiontext"
        android:layout_toLeftOf="@+id/descriptiontext"
        android:layout_below="@+id/gender_dropdown" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/descriptiontext"
        android:layout_below="@+id/gender_dropdown"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/gender_label"
        android:layout_toEndOf="@+id/gender_label" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/date_label"
        android:layout_toLeftOf="@+id/universities"
        android:layout_toStartOf="@+id/universities"
        android:src="@drawable/insert_pic_icon"
        android:layout_above="@+id/white" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:id="@+id/cancel_button"
        android:layout_alignTop="@+id/update_button"
        android:layout_toLeftOf="@+id/blue"
        android:layout_toStartOf="@+id/blue" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Update"
        android:id="@+id/update_button"
        android:onClick="testClick"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/radiogroup2"
        android:layout_alignEnd="@+id/radiogroup2" />

</RelativeLayout>
